@@ -15,6 +15,7 @@
  */
 package de.mhus.cherry.reactive.engine.util;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
@@ -62,8 +63,8 @@ public class PoolValidator {
 				
 		// test object instantiation
 		try {
-			elem.getElementClass().newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			elem.getElementClass().getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			e.printStackTrace();
 			findings.add(new Finding(LEVEL.FATAL, name, "Can't initialize: " + e.toString()));
 			return;
